# LLM-RL-Gaming

./: .gitignore  OLLAMA_LOCAL_LLM_GUIDE.txt  README.md  pyproject.toml
src/war_game/: __init__.py  cli.py  controllers.py  engine.py  llm.py  map.py  model.py  scenario.py  visual.py
src/war_game/rl/: __init__.py  dqn.py  env.py
tests/: test_engine.py  test_llm.py  test_rl_env.py
