[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-rl-war-game"
version = "0.1.0"
description = "Extensible real-time hex war-game simulator for LLM planning and RL tactical control"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "torch>=2.4", "tensorboard>=2.17"]

[project.optional-dependencies]
visual = ["pygame>=2.6"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
war-game = "war_game.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
